// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package user;

option go_package = "/user";

import "protocol/pbentity/user.proto";

service User{
    rpc Create(CreateReq) returns (CreateRes) {}
    rpc GetOne(GetOneReq) returns (GetOneRes) {}
    rpc GetList(GetListReq) returns (GetListRes) {}
    rpc Delete(DeleteReq) returns (DeleteRes) {}
}

message CreateReq {
    string Passport = 1;
    string Password = 2;
    string Nickname = 3;
}
message CreateRes {}

message GetOneReq {
    uint64 Id = 1;
}
message GetOneRes {
    pbentity.User User = 1;
}

message GetListReq {
    int32 Page = 1;
    int32 Size = 2;
}
message GetListRes {
    repeated pbentity.User User = 1;
}

message DeleteReq {
    uint64 Id = 1;
}
message DeleteRes {}